--- a/web/core/templates/overview.html
+++ b/web/core/templates/overview.html
@@ -25,7 +25,7 @@
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
                             <li class="breadcrumb-item"><a href="#!">Dashboards</a></li>
-                            <li class="breadcrumb-item"><a href="#!">MQTT Dashboard</a></li>
+                            <li class="breadcrumb-item"><a href="#!">MQTT Overview Dashboard</a></li>
                         </ul>
                     </div>
                 </div>
@@ -59,18 +59,19 @@
                 </div>
             </div>
 
-	    <div class="col-md-12">
+            <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
                         <h5>Messages Per Topic</h5>
                     </div>
-                <div class="card-body">
-                <div id="bar-chart-1"></div>
+                    <div class="card-body">
+                        <div id="bar-chart-1"></div>
                     </div>
                 </div>
-             </div>
-	</div>
+            </div>
+        </div>
 
+        <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
@@ -82,6 +83,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
         <div class="row">
             <div class="col-md-12">
