--- a/web/core/templates/device_overview.html
+++ b/web/core/templates/device_overview.html
@@ -55,112 +55,108 @@
 						</div>
 					</div>
 				</div>
-			</div>
+            </div>
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5>Device Components</h5>
-                        </div>
-                        <div class="card-body">
-                            <h5> Network Information {{ type }}</h5>
-                            <hr>
-                            <div class="col-md-6">
-                                <form action="/device/{{ ip }}" method="post">
+                <div class="card col-sm-7">
+                    <div class="card-header">
+                        <h5>Device Components</h5>
+                    </div>
+                    <div class="card-body">
+                        <h5> Network Information {{ type }}</h5>
+                        <hr>
+                        <div class="col-sm-12">
+                            <form action="/device/{{ ip }}" method="post">
                                 {% csrf_token %} 
-                                    <div class="form-group row">
-                                        <label for="staticIP" class="col-sm-3 col-form-label">IP Address</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" readonly class="form-control-plaintext" id="staticIP" value= {{ ip }}>
-                                            <small id="ipHelp" class="form-text text-muted">The address that devices use to communicate.</small>
-                                        </div>
+                                <div class="form-group row">
+                                    <label for="staticIP" class="col-sm-3 col-form-label">IP Address</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" readonly class="form-control-plaintext" id="staticIP" value= {{ ip }}>
+                                        <small id="ipHelp" class="form-text text-muted">The address that devices use to communicate.</small>
                                     </div>
-                                    <div class="form-group row">
-                                        <label for="staticMAC" class="col-sm-3 col-form-label">MAC Address</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" readonly class="form-control-plaintext" id="staticMAC" value= {{ mac }}>
-                                            <small id="macHelp" class="form-text text-muted">The hardcoded address the device uses to communicate.</small>
-                                        </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="staticMAC" class="col-sm-3 col-form-label">MAC Address</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" readonly class="form-control-plaintext" id="staticMAC" value= {{ mac }}>
+                                        <small id="macHelp" class="form-text text-muted">The hardcoded address the device uses to communicate.</small>
                                     </div>
-                            <div class="form-group row">
+                                </div>
+                                <div class="form-group row">
                                     <label for="staticMAC" class="col-sm-3 col-form-label">Static IP</label>
-                                 <div class="col-sm-9 custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="ipSwitch" checked>
-                                    <label class="custom-control-label" for="ipSwitch">Enable</label>
-                                    <small id="ipSwitch" class="form-text text-muted">Will the IP Address of the device change over time</small>
-                                </div>
-                            </div>
-                            </div>
-                            <div class="input-group col-md-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroup-sizing-default">Ports</span>
-                                </div>
-                                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" value= "{% for p in open_ports %} {{ p }} {% endfor %}">
-                            </div>
-                            
-                            <div class="col-md-5">
-                                    <div class="card-header">
-                                        <h5>Open Ports</h5>
-                                        <span class="d-block m-t-5">List of open ports and their <code> risk </code> </code> factor </span>
+                                    <div class="col-sm-9 custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" id="ipSwitch" checked>
+                                        <label class="custom-control-label" for="ipSwitch">Enable</label>
+                                        <small id="ipSwitch" class="form-text text-muted">Will the IP Address of the device change over time</small>
                                     </div>
-                                    <div class=" table-border-style">
-                                        <div class="table-responsive">
-                                            <table class="table table-dark">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Port</th>
-                                                        <th>Risk</th>
-                                                        <th>Service</th>
-                                                        <th>Description</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    {% for port, info in port_info.items %}
-                                                    {% if info.risk == 1 %}
-                                                        <tr class="bg-success">
-                                                    {% elif info.risk == 2 %}
-                                                        <tr class="bg-warning">
-                                                    {% elif info.risk == 3 %}
-                                                        <tr class="bg-danger">
-                                                    {% else %}
-                                                        <tr class="bg-primary">
-                                                    {% endif %}
-                                                        <td>{{ port }}</td>
-
-
-                                                    {% if info.risk == 1 %}
-                                                        <td> LOW </td>
-                                                    {% elif info.risk == 2 %}
-                                                        <td> MODERATE </td>
-                                                    {% elif info.risk == 3 %}
-                                                        <td> HIGH </td>
-                                                    {% else %}
-                                                        <td> Unknown </td>
-                                                    {% endif %}
-
-                                                        <td>{{ info.service }}</td>
-                                                        <td> {{ info.comment }}</td>
-                                                    </tr>
-                                                      {% endfor %}
-                                                    
-                                                    {% if not port_info.keys  %}
-                                                        <tr class="bg-success">
-                                                        <td> None </td>
-                                                        <td> None </td>
-                                                        <td> None </td>
-                                                        <td> None </td>
-                                                        </tr>
-                                                    {% endif %}
-                                                </tbody>
-                                            </table>
-                                        </div>
+                                </div>
+                                <div class="form-group row col-md-9">
+                                    <label for="staticMAC" class="col-sm-3 col-form-label">Ports</label>
+                                    <div class="col-sm-9 custom-control">
+                                        <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" value= "{% for p in open_ports %} {{ p }} {% endfor %}">
                                     </div>
-                            </div>
-                             <button type="submit" class="btn  btn-primary">Update</button>
+                                </div>
+                                <button type="submit" class="btn  btn-primary">Update</button>
                             </form>
-                        </div>
+                    </div>
                     </div>
                 </div>
+                <div class="card col-md-7">
+                    <div class="card-header">
+                        <h5>Open Ports</h5>
+                        <span class="d-block m-t-5">List of open ports and their <code> risk </code> </code> factor </span>
+                    </div>
+                    <div class=" table-border-style table-responsive">
+                        <table class="table table-dark">
+                            <thead>
+                                <tr>
+                                    <th>Port</th>
+                                    <th>Risk</th>
+                                    <th>Service</th>
+                                    <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for port, info in port_info.items %}
+                                {% if info.risk == 1 %}
+                                    <tr class="bg-success">
+                                {% elif info.risk == 2 %}
+                                    <tr class="bg-warning">
+                                {% elif info.risk == 3 %}
+                                    <tr class="bg-danger">
+                                {% else %}
+                                    <tr class="bg-primary">
+                                {% endif %}
+                                    <td>{{ port }}</td>
+
+
+                                {% if info.risk == 1 %}
+                                    <td> LOW </td>
+                                {% elif info.risk == 2 %}
+                                    <td> MODERATE </td>
+                                {% elif info.risk == 3 %}
+                                    <td> HIGH </td>
+                                {% else %}
+                                    <td> Unknown </td>
+                                {% endif %}
+
+                                    <td>{{ info.service }}</td>
+                                    <td> {{ info.comment }}</td>
+                                </tr>
+                                    {% endfor %}
+                                
+                                {% if not port_info.keys  %}
+                                    <tr class="bg-success">
+                                    <td> None </td>
+                                    <td> None </td>
+                                    <td> None </td>
+                                    <td> None </td>
+                                    </tr>
+                                {% endif %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
             </div>
             <!-- [ Main Content ] end -->
         </div>
