--- a/web/core/templates/layouts/base-fullscreen.html
+++ b/web/core/templates/layouts/base-fullscreen.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>
-        Django Gradient Able - {% block title %}{% endblock %} | AppSeed
+        Pi-LINk - {% block title %}{% endblock %}
     </title>    
 	<!-- HTML5 Shim and Respond.js IE11 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +20,6 @@
 	
 	<meta name="description" content="" />
 	<meta name="keywords" content="">
-	<meta name="author" content="Codedthemes" />
 	<!-- Favicon icon -->
 	<link rel="icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
 
