--- a/web/core/templates/device_overview.html
+++ b/web/core/templates/device_overview.html
@@ -20,6 +20,7 @@
                             </div>
                             <ul class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="#!">Network</a></li>
                                 <li class="breadcrumb-item"><a href="#!">Devices</a></li>
                                 <li class="breadcrumb-item"><a href="#!">{{ ip }}</a></li>
                             </ul>
@@ -50,7 +51,7 @@
 							</div>
 						</div>
 						<div class="card-body">
-							<p>"This page allows you to view and edit information about a specific device on your network. This page also provides information about the ports that are open on a device.
+							<p>This page allows you to view and edit information about a specific device on your network. This page also provides information about the ports that are open on a device.
 							</p>
 						</div>
 					</div>
@@ -62,7 +63,7 @@
                         <h5>Device Components</h5>
                     </div>
                     <div class="card-body">
-                        <h5> Network Information {{ type }}</h5>
+                        <h5> Network Information</h5>
                         <hr>
                         <div class="col-sm-12">
                             <form action="/device/{{ ip }}" method="post">
@@ -107,7 +108,14 @@
                                     <label for="firmware" class="col-sm-3 col-form-label">Device Firmware</label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control" id="firmware" name="firmware" value= "{{ firmware }}">
-                                        <small id="firmware" class="form-text text-muted">The firmware</small>
+                                        <small id="firmware" class="form-text text-muted">The last known firmware on this device</small>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="deviceType" class="col-sm-3 col-form-label">Device Type</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="deviceType" name="deviceType" value= "{{ type }}">
+                                        <small id="deviceType" class="form-text text-muted">What type of IoT device is this</small>
                                     </div>
                                 </div>
                                 <div class="form-group row">
