working except for form submit

--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -5,7 +5,15 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
 <!-- Specific CSS goes HERE -->
-{% block stylesheets %}{% endblock stylesheets %}
+{% block stylesheets %}
+<!-- <style type="text/css">
+    input[type="text"] { 
+        border: 1px;
+    }
+    /* other style definitions go here */
+
+</style> -->
+{% endblock stylesheets %}
 
 {% block content %}	
     <!-- [ Main Content ] start -->
@@ -84,7 +92,7 @@
                                             <td>{{key}}</td>
                                             <td>{{value.hostname}}</td>
                                             <td>{{value.vendor}}</td>
-                                            <td style="color: green">ENABLED</td>
+                                            <td style="color: green">{{value.device_status|upper}}</td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
@@ -97,7 +105,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <h5>Port Overview</h5>
+                            <h5>Open Ports</h5>
                             {{ port_info|json_script:"port-info" }}
                         </div>
                         <div class="card-body">
@@ -108,34 +116,41 @@
                 <!-- [ basic-table ] start -->
                 <div class="col-md-6">
                     <div class="card">
-                        <div class="card-header">
-                            <h5>Manage Updates</h5>
-                            <button class="btn  btn-secondary" type="button" style="float: right"><i class='fas fa-edit'></i></button>
-                        </div>
-                        <div class="card-body table-border-style">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Date Added</th>
-                                            <th>MAC Address</th>
-                                            <th>Last Updated</th>
-                                            <th>Firmware</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for key, value in lease_data.items %}
-                                        <tr>
-                                            <td>{{value.date_added}}</td>
-                                            <td>{{key}}</td>
-                                            <td>{{value.last_updated}}</td>
-                                            <tD>{{value.firmware}}</tD>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
+                        <form id="updateForm" action="/network/" method="post">
+                            {% csrf_token %}
+                            <div class="card-header">
+                                <h5>Manage Updates</h5>
+                                {{ update_info|json_script:"update-info" }}
+                                <div class="btn-group" role="group" aria-label="Button group example" style="float: right">
+                                    <button id="editUpdate" class="btn  btn-primary btn-sm mr-1" type="button" style="float: right"><i class='fas fa-edit'></i></button>
+                                    <button id="trashUpdate" class="btn  btn-secondary btn-sm mr-1" type="button" style="display: none"><i class='far fa-trash-alt'></i></button>
+                                    <button id="saveUpdate" class="btn  btn-primary btn-sm mr-1" type="submit" style="display: none"><i class='fa fa-check '></i></button>
+                                </div>
                             </div>
-                        </div>
+                            <div class="card-body table-border-style">
+                                <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
+                                <div class="table-responsive">
+                                    <table id= "updateForm" class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>MAC Address</th>
+                                                <th>Last Updated</th>
+                                                <th>Firmware</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for key, value in lease_data.items %}
+                                            <tr>
+                                                <td>{{key}}</td>
+                                                <td><input id="last_update" class="form-control" style='width:10ch; border-style: none;' type="text" value="{{value.last_updated}}" readonly></td>
+                                                <td><input id="firmware" class="form-control" style='width:20ch; border-style: none;' type="text" value="{{value.firmware}}" readonly></td>
+                                            </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
                 {% endblock content %}
