--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -121,7 +121,7 @@
                             <div class="card-header">
                                 <h5>Manage Updates</h5>
                                 {{ update_info|json_script:"update-info" }}
-                                <div class="btn-group" role="group" aria-label="Button group example" style="float: right">
+                                <div class="btn-group" style="float: right">
                                     <button id="editUpdate" class="btn  btn-primary btn-sm mr-1" type="button" style="float: right"><i class='fas fa-edit'></i></button>
                                     <button id="trashUpdate" class="btn  btn-secondary btn-sm mr-1" type="button" style="display: none"><i class='far fa-trash-alt'></i></button>
                                     <button id="saveUpdate" class="btn  btn-primary btn-sm mr-1" type="submit" style="display: none"><i class='fa fa-check '></i></button>
