mqtt blurb + home button fix

--- a/web/core/templates/device_overview.html
+++ b/web/core/templates/device_overview.html
@@ -19,7 +19,7 @@
                                 <h5 class="m-b-10">Device Dashboard</h5>
                             </div>
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="../network"><i class="feather icon-home"></i></a></li>
                                 <li class="breadcrumb-item"><a href="#!">Network</a></li>
                                 <li class="breadcrumb-item"><a href="#!">Devices</a></li>
                                 <li class="breadcrumb-item"><a href="#!">{{ ip }}</a></li>
