--- a/web/core/templates/explorer.html
+++ b/web/core/templates/explorer.html
@@ -19,7 +19,7 @@
                             <h5 class="m-b-10">MQTT Explorer </h5>
                         </div>
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="network"><i class="feather icon-home"></i></a></li>
                             <li class="breadcrumb-item"><a href="#!">MQTT Message Explorer </a></li>
                         </ul>
                     </div>
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <p>This is an MQTT explorer, it shows messages. What are MQTT messages? Good Question. Its ...
+                        <p>This is the MQTT explorer page. Here, you can see all MQTT messages sent from devices that exist within your network. You can sort by date, topic, metric, or by values. The MQTT messages can be filtered by a valid date range or by searching a word. 
                         </p>
                     </div>
                 </div>
