--- a/web/core/templates/mqtt.html
+++ b/web/core/templates/mqtt.html
@@ -23,7 +23,7 @@
                             <h5 class="m-b-10">MQTT Dashboard</h5>
                         </div>
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="network"><i class="feather icon-home"></i></a></li>
                             <li class="breadcrumb-item"><a href="#!">Dashboards</a></li>
                             <li class="breadcrumb-item"><a href="#!">MQTT Overview Dashboard</a></li>
                         </ul>
