--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -20,7 +20,7 @@
                                 <h5 class="m-b-10">Network Overview</h5>
                             </div>
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="network"><i class="feather icon-home"></i></a></li>
                                 <li class="breadcrumb-item"><a href="#!">Network Overview</a></li>
                             </ul>
                         </div>
