--- a/web/core/templates/mqtt.html
+++ b/web/core/templates/mqtt.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Apex Charts {% endblock %}
+{% block title %} MQTT Dashboard {% endblock %}
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <!-- Specific CSS goes HERE -->
