modified alert table

--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -126,7 +126,7 @@
                                             {% for key, value in lease_data.items %}
                                             <tr>
                                                 <td><input id="mac" class="form-control-plaintext" type="text" value="{{key}}" readonly></td>
-                                                <td><input id="last_update" class="form-control" style='width:10ch;' type="text" value="{{value.last_updated}}" readonly></td>
+                                                <td><input id="last_update" class="form-control" style='width:11ch;' type="text" value="{{value.last_updated}}" readonly></td>
                                                 <td><input id="firmware" class="form-control" style='width:15ch;' type="text" value="{{value.firmware}}" readonly></td>
                                             </tr>
                                             {% endfor %}
@@ -148,7 +148,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
                     <div class="card">
                         <form class="updateForm" id="updateForm" action="/network" method="post">
                             {% csrf_token %}
@@ -160,16 +162,16 @@
                                     <table id= "alertForm" class="table table-dark">
                                         <thead>
                                             <tr>
-                                                <th>IP</th>
                                                 <th>Timestamp</th>
+                                                <th>IP</th>
                                                 <th>Alert</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             {% for alert in alerts %}
                                             <tr class="bg-success">
-                                                <td>{{alert.ip}}</td>
                                                 <td>{{alert.timestamp}}</td>
+                                                <td>{{alert.ip}}</td>
                                                 <td>{{alert.message}}</td>
                                             </tr>
                                             {% endfor %}
