--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -163,8 +163,8 @@
                                         <thead>
                                             <tr>
                                                 <th>Timestamp</th>
-                                                <th>IP</th>
-                                                <th>Alert</th>
+                                                <th>IP Address</th>
+                                                <th>Message</th>
                                                 <th></th>
                                             </tr>
                                         </thead>
